# music_task_manager

./: .gitignore  Dockerfile  README.md  README_GENERAL.md  config.py  docker-compose.yml  docker_entry_point.sh  pyproject.toml  run.py
app/: __init__.py  models.py
app/api/: __init__.py  data_processor.py  tasks.py
app/api/schemas/: schemas.py
docker/: docker-compose.yml
migrations/versions/: 7ca21ed6e4ab_added_tasks.py  8f9dd2b0b560_added_timestamp.py
utils/: file_uploader.py  song_faker.py
