[tool.poetry]
name = "bmat-task-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
black = "^24.8.0"
blueprint = "^3.4.2"
flask-cors = "^4.0.1"
apifairy = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
